; ModuleID = '/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_test_http_auth.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_test_http_auth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32* }
%struct.mg_mgr = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"127.0.0.1:1234\00", align 1
@test_auth_server_handler = common dso_local global i32 0, align 4
@test_auth_client_handler = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"http://foo:bar@127.0.0.1:1234\00", align 1
@c_int_eq = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [28 x i8] c"ws://foo:bar@127.0.0.1:1234\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"ws://127.0.0.1:1234\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"myproto\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @test_http_auth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @test_http_auth() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.mg_connection*, align 8
  %3 = alloca %struct.mg_mgr, align 4
  %4 = call i32 @mg_mgr_init(%struct.mg_mgr* %3, i32* null)
  %5 = load i32, i32* @test_auth_server_handler, align 4
  %6 = call %struct.mg_connection* @mg_bind(%struct.mg_mgr* %3, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %5)
  store %struct.mg_connection* %6, %struct.mg_connection** %2, align 8
  %7 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %8 = call i32 @mg_set_protocol_http_websocket(%struct.mg_connection* %7)
  %9 = load %struct.mg_connection*, %struct.mg_connection** %2, align 8
  %10 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %9, i32 0, i32 0
  store i32* %1, i32** %10, align 8
  store i32 0, i32* %1, align 4
  %11 = load i32, i32* @test_auth_client_handler, align 4
  %12 = call i32 @mg_connect_http(%struct.mg_mgr* %3, i32 %11, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null)
  %13 = load i32, i32* @c_int_eq, align 4
  %14 = call i32 @poll_until(%struct.mg_mgr* %3, i32 4, i32 %13, i32* %1, i8* inttoptr (i64 1 to i8*))
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @ASSERT_EQ(i32 %15, i32 1)
  store i32 0, i32* %1, align 4
  %17 = load i32, i32* @test_auth_client_handler, align 4
  %18 = call i32 @mg_connect_ws(%struct.mg_mgr* %3, i32 %17, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i8* null, i32* null)
  %19 = load i32, i32* @c_int_eq, align 4
  %20 = call i32 @poll_until(%struct.mg_mgr* %3, i32 4, i32 %19, i32* %1, i8* inttoptr (i64 1 to i8*))
  %21 = load i32, i32* %1, align 4
  %22 = call i32 @ASSERT_EQ(i32 %21, i32 1)
  store i32 0, i32* %1, align 4
  %23 = load i32, i32* @test_auth_client_handler, align 4
  %24 = call i32 @mg_connect_ws(%struct.mg_mgr* %3, i32 %23, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i32* null)
  %25 = load i32, i32* @c_int_eq, align 4
  %26 = call i32 @poll_until(%struct.mg_mgr* %3, i32 4, i32 %25, i32* %1, i8* inttoptr (i64 2 to i8*))
  %27 = load i32, i32* %1, align 4
  %28 = call i32 @ASSERT_EQ(i32 %27, i32 2)
  %29 = call i32 @mg_mgr_free(%struct.mg_mgr* %3)
  ret i8* null
}

declare dso_local i32 @mg_mgr_init(%struct.mg_mgr*, i32*) #1

declare dso_local %struct.mg_connection* @mg_bind(%struct.mg_mgr*, i8*, i32) #1

declare dso_local i32 @mg_set_protocol_http_websocket(%struct.mg_connection*) #1

declare dso_local i32 @mg_connect_http(%struct.mg_mgr*, i32, i8*, i32*, i32*) #1

declare dso_local i32 @poll_until(%struct.mg_mgr*, i32, i32, i32*, i8*) #1

declare dso_local i32 @ASSERT_EQ(i32, i32) #1

declare dso_local i32 @mg_connect_ws(%struct.mg_mgr*, i32, i8*, i8*, i32*) #1

declare dso_local i32 @mg_mgr_free(%struct.mg_mgr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
